Fixing broken build due to unused variables in release mode https://bugs.webkit.org/show_bug.cgi?id=67004

Unreviewed, release build fix.

Fixing broken build due to unused variables in ASSERTs in release build.

Patch by Mark Hahnenberg <mhahnenberg@apple.com> on 2011-08-25

* runtime/JSObject.h:
(JSC::JSObject::finishCreation):
* runtime/JSString.h:
(JSC::RopeBuilder::finishCreation):
* runtime/ScopeChain.h:
(JSC::ScopeChainNode::finishCreation):

Canonical link: https://commits.webkit.org/82786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93841 268f45cc-cd09-0410-ab3c-d52691b4dbfc